--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header>
+  <div class="container">
+    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+      <a class="text-dark text-decoration-none me-2" [routerLink]="['/']" aria-label="Product">
+        MO Store
+      </a>
+      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+        <a class="me-3 py-2 text-dark text-decoration-none" [routerLink]="['/products']" routerLinkActive="active">Products</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" [routerLink]="['/cart']">Cart</a>
+      </nav>
+    </div>
+  </div>
+</header>
